--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "babel-plugin-emotion": "^10.0.33",
+    "firebase": "^7.14.5",
+    "firebase-admin": "^8.12.1",
     "next": "^9.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
