--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "babel-plugin-emotion": "^10.0.33",
+    "date-fns": "^2.14.0",
     "firebase": "^7.14.5",
     "firebase-admin": "^8.12.1",
     "next": "^9.4.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-firebase-file-uploader": "^2.4.3"
   }
 }
