--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^9.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-firebase-file-uploader": "^2.4.3"
+    "react-firebase-file-uploader": "^2.4.3",
+    "react-spinners": "^0.8.3"
   }
 }
